# io-uring-soup-bin

./: .clang-format  .clang-tidy  .envrc  .gitignore  CMakeLists.txt  README.md  conanfile.py
doc/adr/: ADR-template.md
etc/conan2/profiles/: clang-Common  clang-Debug  clang-RelWithDebInfo  clang-Release
src/core/: client.cpp  client.h  server.cpp  server.h  soup_bin.h
src/example/: client_example.cpp  server_example.cpp
src/test/: client_test.cpp  server_test.cpp
src/util/: boost_log.cpp  boost_log.h  boost_log_init.cpp  boost_log_init.h  boost_log_util.h
